2006-12-04 [paul]	0.4.17

	0.4.17 released

2006-11-28 [paul]	0.4.16cvs4

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.4.16cvs3

	* README
	* configure.ac
	* debian/README.Debian
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
		renaming

2006-11-17 [wwp]	0.4.16cvs2

	* src/Makefile.am
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
		Merged both fetchinfo plugins into a single one.

2006-11-07 [paul]	0.4.16cvs1

	* ChangeLog
	* README
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/rules
	* src/Makefile.am
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin.h
	* src/fetchinfo_plugin_gtk.c
		Name change

2006-09-25 [paul]	0.4.16

	0.4.16 released

2006-09-22 [ticho]	0.4.15cvs5

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	0.4.15cvs4

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [wwp]	0.4.15cvs3

	* src/fetchinfo_plugin_gtk.c
		updated to match the plugin API changes, we really need to merge
		the fetchinfo_GTK plugin to the core fetchinfo one.

2006-08-27 [colin]	0.4.15cvs2

	* src/fetchinfo_plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.4.15cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.4.15

	0.4.15 released

2006-06-06 [wwp]	0.4.14cvs2

	* configure.ac
	* src/Makefile.am
	* src/.cvsignore
	* src/plugin_version.h.in
	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead),
		removed extra linefeed in plugin info text.


2006-06-03 [wwp]	0.4.14cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.4.14

	* src/fetchinfo_plugin.c
	* src/fetchinfo_plugin_gtk.c