@@ -9,3 +9,4 @@
 ( cvs diff -u -r 1.2.2.7 -r 1.2.2.8 src/Makefile.am;  cvs diff -u -r 1.4.2.10 -r 1.4.2.11 src/fetchinfo_plugin.c;  cvs diff -u -r 1.3.2.9 -r 1.3.2.10 src/fetchinfo_plugin_gtk.c;  ) > 0.4.16cvs2.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 README;  cvs diff -u -r 1.7.2.24 -r 1.7.2.25 configure.ac;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 debian/README.Debian;  cvs diff -u -r 1.4.2.11 -r 1.4.2.12 src/fetchinfo_plugin.c;  cvs diff -u -r 1.3.2.10 -r 1.3.2.11 src/fetchinfo_plugin_gtk.c;  ) > 0.4.16cvs3.patchset
 ( cvs diff -u -r 1.7.2.25 -r 1.7.2.26 configure.ac;  ) > 0.4.16cvs4.patchset
+( cvs diff -u -r 1.7.2.27 -r 1.7.2.28 configure.ac;  cvs diff -u -r 1.4.2.12 -r 1.4.2.13 src/fetchinfo_plugin.c;  ) > 0.4.17cvs1.patchset
