@@ -1,3 +1,9 @@
+2006-12-15 [ticho]	0.4.17cvs1
+
+	* configure.ac
+	* src/fetchinfo_plugin.c
+		Use check_plugin_version() for version check.
+
 2006-12-04 [paul]	0.4.17
 
 	0.4.17 released
